--- a/Modern/index.html
+++ b/Modern/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./array.js"></script>
+    <script src="./array-api.js"></script>
   </body>
 </html>
