--- a/Array/index.html
+++ b/Array/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="./@ArrayList.js"></script>
+    <script src="./map().js"></script>
   </body>
 </html>
